--- a/package.json
+++ b/package.json
@@ -5,14 +5,17 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack --mode development --config build/webpack.config.js"
+    "dev": " webpack-dev-server  --mode development --config webpack.config.js"
   },
   "author": "andyxic",
   "license": "MIT",
   "devDependencies": {
     "autoprefixer": "^8.1.0",
+    "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "css-loader": "^0.28.11",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^5.0.0",
     "gulp-babel": "^7.0.1",
@@ -25,15 +28,19 @@
     "gulp-sass": "^3.1.0",
     "gulp-uglify": "^3.0.0",
     "gulp-watch": "^5.0.0",
+    "html-webpack-plugin": "^3.1.0",
     "postcss": "^6.0.20",
     "postcss-advanced-variables": "^2.3.3",
+    "postcss-cssnext": "^3.1.0",
     "postcss-loader": "^2.1.2",
     "postcss-nested": "^3.0.0",
     "postcss-partial-import": "^4.1.0",
     "postcss-px2rem": "^0.3.0",
     "postcss-scss": "^1.0.4",
+    "precss": "^3.1.2",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
+    "stylelint": "^9.1.3",
     "webpack": "^4.1.1",
     "webpack-cli": "^2.0.12",
     "webpack-dev-server": "^3.1.1"
