--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": " webpack-dev-server  --mode development --config webpack.config.js"
+    "dev": " webpack-dev-server  --mode development --config webpack.config.js",
+    "build": "webpack --mode production --config webpack.config.js"
   },
   "author": "andyxic",
   "license": "MIT",
@@ -16,6 +17,7 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^1.1.11",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^5.0.0",
     "gulp-babel": "^7.0.1",
@@ -28,7 +30,9 @@
     "gulp-sass": "^3.1.0",
     "gulp-uglify": "^3.0.0",
     "gulp-watch": "^5.0.0",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.1.0",
+    "jquery": "^3.3.1",
     "postcss": "^6.0.20",
     "postcss-advanced-variables": "^2.3.3",
     "postcss-cssnext": "^3.1.0",
